--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
         "start": "node app.js"
     },
     "dependencies": {
-        "ibm-watson": "^6.1.1"
+        "body-parser": "^1.19.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "ibm-watson": "^6.1.1",
+        "multer": "^1.4.3",
+        "socket.io": "^4.2.0"
     },
     "repository": {},
     "engines": {
